# sempal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  agents.md  audit_report.md  bench.json  build.rs  build_errors.txt  build_errors_v10.txt  build_errors_v2.txt  build_errors_v3.txt  build_errors_v4.txt  build_errors_v5.txt  build_errors_v6.txt  build_errors_v7.txt  build_errors_v8.txt  build_errors_v9.txt  build_output.txt  bundle_config.toml  cargo_check_output.txt  check_out.txt  check_output.txt  dataset.py  errors.txt  final_errors.txt  log.txt  log3.txt  mentions.md  model.json  output_log.txt  profilegen.ps1  release_contract.toml  rls_cargo.toml  test_log.txt  test_out.txt  test_output.txt  (+3 more)
.github/workflows/: changelog-on-release.yml  ci.yml  release-build.yml  release-from-next.yml  release-on-main.yml  rust-style.yml  sync-next.yml
assets/ml/clap_v1/: preprocessor.json
assets/ml/panns_cnn14_16k/: model_meta.json  panns_cnn14_16k.bpk  panns_cnn14_16k.onnx  panns_cnn14_16k.onnx.data  panns_cnn14_16k.rs
benches/: ann_index.rs  tagging.rs
dataset/: features.f32le  manifest.json  samples.jsonl
docs/: _config.yml  ann_index_container.md  cli_training.md  drag_audit.md  egui_layout.md  feature_vector.md  index.md  label_rules.example.toml  performance_qa.md  plan.md  refactor_strategy.md  release_checklist.md  styleguide.md  todo.md  todov2.md  transient_audit.md  transient_plan.md  updater-contract.md  usage.md
docs/_layouts/: default.html
docs/assets/css/: theme.css
scripts/: build_installer.ps1  build_linux_tar.sh  build_macos_pkg.sh  build_release_zip.sh  ci_golden_tests.ps1  ci_golden_tests.sh  enable_fallback_token_storage.ps1  fetch_burnpack.ps1  fetch_burnpack.sh  generate_golden_embedding.ps1  generate_golden_embedding.sh  setup_clap.ps1  setup_clap.py  setup_panns.ps1  setup_panns.py  setup_yamnet.ps1  setup_yamnet.py
src/: app.rs  app_dirs.rs  audio.rs  external_clipboard.rs  external_drag.rs  file_browser.rs  http_client.rs  lib.rs  logging.rs  main.rs  model_setup.rs  selection.rs  sqlite_ext.rs  ui.rs  wav_sanitize.rs  waveform.rs
src/analysis/: anchor_match.rs  anchor_scoring.rs  ann_index.rs  ann_index_tests.rs  audio.rs  audio_decode.rs  augment.rs  clap_preprocess.rs  embedding.rs  fft.rs  hdbscan.rs  label_match_ann.rs  mod.rs  panns_preprocess.rs  similarity.rs  tflite_runtime.rs  time_domain.rs  umap.rs  vector.rs  version.rs
src/analysis/ann_index/: build.rs  container.rs  mod.rs  state.rs  storage.rs  update.rs
src/analysis/audio/: analysis_prep.rs  decode.rs  decode_io.rs  mod.rs  normalize.rs  resample.rs  silence.rs
src/analysis/embedding/: backend.rs  infer.rs  logmel.rs  mod.rs  model.rs  query.rs
src/analysis/hdbscan/: engine.rs  (+3 more)
src/app/: callbacks.rs  collections.rs  loading.rs  metrics.rs  mod.rs  navigation.rs  playback.rs  scan.rs  sources.rs  tags.rs  view.rs  wav_list.rs  wavs.rs
src/audio/: async_decode.rs  decoder.rs  decoder_draft.rs  device.rs  fade.rs  input.rs  loop_diagnostic.rs  looping.rs  mixer.rs  mod.rs  output.rs  player.rs  recording.rs  routing.rs  source.rs  source_draft.rs  tests.rs  time_stretch.rs
src/dataset/: export.rs  loader.rs  mod.rs
src/egui_app/: controller.rs  hints.rs  mod.rs  state.rs  ui.rs  view_model.rs
src/github/: issues.rs  mod.rs
src/issue_gateway/: api.rs  mod.rs  token_store.rs
src/labeling/: mod.rs  weak.rs  weak_config.rs
src/ml/: metrics.rs  mod.rs
src/sample_sources/: audio_support.rs  collections.rs  config.rs  config_defaults.rs  config_io.rs  config_types.rs  db.rs  library.rs  mod.rs  scanner.rs
src/ui/: collection_panel.slint  source_panel.slint  status_bar.slint  top_bar.slint  types.slint  wav_list_panel.slint  waveform_panel.slint
src/updater/: apply.rs  archive.rs  check.rs  fs_ops.rs  github.rs  mod.rs
src/waveform/: decode.rs  error.rs  mod.rs  render.rs  sampling.rs  transients.rs  zoom_cache.rs
tests/: controller_browser_integration.rs  golden_embedding.json  repro_duration.rs  take_duration_test.rs  version_tools.rs
tests/support/: mod.rs  sempal_env.rs  wav.rs
tools/: export_clap_onnx.py  export_panns_onnx.py  generate_clap_golden_embedding.py  generate_clap_golden_mel.py  generate_logreg_golden_inference.py  generate_panns_golden_embedding.py  generate_panns_golden_mel.py  ref_clap_embed.py  ref_panns_embed.py  train_logreg_sqlite.py  validate_clap_onnx.py  validate_panns_onnx.py
(+532 files in other folders)
