[package]
name = "sempal"
version = "0.130.0"
edition = "2024"
default-run = "sempal"

[dependencies]
hound = "3.5.1"
rodio = { version = "0.21.1", default-features = true }
sysinfo = "0.37.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
directories = "6.0.0"
rfd = "0.16.0"
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = true }
open = "5.3.3"
image = "0.25.9"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.8.0"
semver = "1.0.27"

[build-dependencies]
semver = "1.0.27"
toml_edit = "0.23.9"

[[bench]]
name = "tagging"
harness = false
