[package]
name = "sempal"
version = "0.327.0"
edition = "2024"
default-run = "sempal"

[dependencies]
hound = "3.5.1"
cpal = "0.16.0"
rodio = { version = "0.21.1", default-features = true }
sysinfo = "0.37.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.19"
thiserror = "2.0.17"
directories = "6.0.0"
rfd = "0.16.0"
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = true }
open = "5.3.3"
image = "0.25.9"
raw-window-handle = "0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2.4"
time = { version = "0.3.44", features = ["formatting", "macros", "local-offset"] }
fuzzy-matcher = "0.3.7"
rand = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16.0", features = ["asio"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }
windows-implement = "0.60.2"
windows-core = "0.62.2"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.8.1"
semver = "1.0.27"

[build-dependencies]
semver = "1.0.27"
toml_edit = "0.23.9"
embed-resource = "3.0"

[[bench]]
name = "tagging"
harness = false
