[package]
name = "sempal"
version = "0.363.0"
edition = "2024"
default-run = "sempal"

[dependencies]
hound = "3.5.1"
cpal = "0.16.0"
rodio = { version = "0.21.1", default-features = true }
sysinfo = "0.37.2"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.19"
thiserror = "2.0.17"
regex = "1.12.2"
directories = "6.0.0"
rfd = "0.16.0"
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = true }
open = "5.3.3"
image = "0.25.9"
raw-window-handle = "0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2.4"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "local-offset",
] }
fuzzy-matcher = "0.3.7"
rand = "0.9.2"
semver = "1.0.27"
sha2 = "0.10.9"
blake3 = "1.6.1"
tempfile = "3.23.0"
ureq = { version = "2.12.1", features = ["json", "tls"] }
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }
keyring = "3.6.2"
chacha20poly1305 = "0.10.1"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.4", features = ["load-dynamic", "ndarray"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16.0", features = ["asio"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-implement = "0.60.2"
windows-core = "0.62.2"

[dev-dependencies]
criterion = "0.8.1"

[build-dependencies]
embed-resource = "3.0"

[[bench]]
name = "tagging"
harness = false
